# easteregg

./: .gitignore  .gitmodules  AGENTS.md  Basic.lean  Clips.lean  Makefile  README.adoc  README.md  README.org  color_gym.py  compiler.py  dl_skps.py  dl_skps_async.py  eegg2png.py  egg2skp.py  egglog_runner.py  example.txt  gen_report.py  hello.py  json2png.py  lambda_skia.py  make_report.py  mk_report.py  nightly.sh  opt.py  parse_sexp.py  printegg.py  pyproject.toml  pyvenv.cfg  renderer.py  requirements.txt  run.sh  scratch.txt  sexp_compiler.py  skiachrome.org  skiachrome.py  skp.py  skp2eegg.py  skp2eegg.rkt  skp2egg.py  (+8 more)
bench/: Bilibili__layer_56.json  Bilibili__layer_57.json  Canva__layer_0.json  DuckDuckGo__layer_1.json  DuckDuckGo__layer_6.json  Ebay__layer_00.json  Ebay__layer_09.json  Ebay__layer_10.json  Ebay__layer_13.json  Ebay__layer_16.json  Ebay__layer_17.json  Fandom__layer_2.json  Fandom__layer_4.json  GitHub__layer_02.json  GitHub__layer_04.json  GitHub__layer_09.json  GitHub__layer_12.json  GitHub__layer_15.json  GitHub__layer_18.json  Globo__layer_30.json  Globo__layer_31.json  LinkedIn__layer_0.json  Mail_ru__layer_11.json  Mail_ru__layer_13.json  Mail_ru__layer_14.json  Mail_ru__layer_34.json  Mail_ru__layer_42.json  Mail_ru__layer_46.json  Mail_ru__layer_66.json  Microsoft_365__layer_0.json  Microsoft_Bing__layer_8.json  Netflix__layer_0.json  Netflix__layer_2.json  Quora__layer_0.json  Samsung__layer_61.json  Temu__layer_0.json  TikTok__layer_0.json  TikTok__layer_4.json  Twitch__layer_09.json  Yahoo_JP__layer_00.json  (+11 more)
def/: unit__ClipRect_1.skp  unit__ClipRect_2.skp  unit__Draw.skp  unit__Save.skp
docs/: order.adoc  pavel.txt  semantics.adoc  semantics.py  skia-sub-chrome.adoc
egg/: command.egg  extract.egg  run.egg
egg-files/: extract.egg  lambda_skia.egg  prelude.egg
formalization/: Formalization.lean  Main.lean
json/: Baidulayer_0.json  Baidulayer_1.json  Baidulayer_2.json  Baidulayer_3.json  Baidulayer_4.json  Bilibililayer_0.json  Bilibililayer_14.json  Bilibililayer_15.json  Bilibililayer_20.json  Bilibililayer_3.json  Bilibililayer_4.json  Bilibililayer_44.json  Bilibililayer_45.json  Bilibililayer_46.json  Bilibililayer_5.json  Bilibililayer_50.json  Bilibililayer_51.json  Bilibililayer_55.json  Bilibililayer_57.json  Bilibililayer_58.json  Bilibililayer_6.json  Bilibililayer_7.json  Bilibililayer_9.json  Canvalayer_0.json  ChatGPTlayer_0.json  DeepSeeklayer_0.json  DuckDuckGolayer_1.json  DuckDuckGolayer_2.json  DuckDuckGolayer_3.json  DuckDuckGolayer_4.json  DuckDuckGolayer_5.json  DuckDuckGolayer_7.json  Facebooklayer_0.json  Facebooklayer_1.json  (+408 more)
rsrc/: style.css
(+157 files in other folders)
