[project]
version = "1.0.0"
name = "easteregg"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.50.0",
    "pyparsing>=3.2.3",
    "pyright>=1.1.396",
    "ruff>=0.9.9",
    "sexpdata>=1.0.2",
    "skia-python",
    "yattag>=1.16.1",
]
package-mode = false

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.poetry]
name = "easteregg"
version = "0.1.0"
authors = ["Bhargav Kulkarni <bhargavkishork@gmail.com>"]
description = "Add your description here"

[tool.uv.sources]
skia-python = [
  { path = "./skia_python-138.0rc1-cp312-cp312-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
  { path = "./skia_python-138.0rc1-cp312-cp312-manylinux_2_28_x86_64.whl", marker = "sys_platform == 'linux'" },
]
